[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
description = "Xi Rpc Lib - Tokio based implementation of the RPC used in the Xi editor"
homepage = "https://github.com/xi-frontend/xrl"
keywords = [
    "xi",
    "rpc",
    "json-rpc",
]
license-file = "LICENSE-MIT"
name = "xrl"
readme = "README.md"
repository = "https://github.com/xi-frontend/xrl"
version = "0.0.8"
edition = "2018"

[dependencies]
log = "0.4.8"
serde = "1.0.111"
indexmap = "1.4.0"
serde_json = "1.0.55"
async-trait = "0.1.35"
futures = "0.3.0-alpha.16"
xi-rpc = { git = "https://github.com/xi-editor/xi-editor", rev="72ce488" }
xi-core-lib = { git = "https://github.com/xi-editor/xi-editor", rev="72ce488" }
tokio = { version = "0.2.21", features = ["time", "macros", "test-util", "rt-core", "io-util", "process", "sync"] }

[dependencies.clippy]
optional = true
version = "0.0.302"
