[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
description = "Xi Rpc Lib - Tokio based implementation of the RPC used in the Xi editor"
homepage = "https://github.com/xi-frontend/xrl"
keywords = [
    "xi",
    "rpc",
    "json-rpc",
]
license-file = "LICENSE-MIT"
name = "xrl"
readme = "README.md"
repository = "https://github.com/xi-frontend/xrl"
version = "0.0.8"
edition = "2018"

[features]
default = ["client", "api"]
client = ["tokio", "async-trait", "futures"]
api = ["indexmap"]

[dependencies]
log = "0.4.8"
serde = "1.0.111"
serde_json = "1.0.55"
xi-rpc = { git = "https://github.com/xi-editor/xi-editor", rev="72ce488" }
xi-core-lib = { git = "https://github.com/xi-editor/xi-editor", rev="72ce488" }
indexmap = { version = "1.4.0", optional = true }
async-trait = { version = "0.1.35", optional = true }
futures = { version = "0.3.0-alpha.16", optional = true }
tokio = { optional = true, version = "0.2.21", features = ["time", "macros", "test-util", "rt-core", "io-util", "process", "sync"] }
