[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
description = "Xi Rpc Lib - Tokio based implementation of the RPC used in the Xi editor"
homepage = "https://github.com/xi-frontend/xrl"
keywords = [
    "xi",
    "rpc",
    "json-rpc",
]
license-file = "LICENSE-MIT"
name = "xrl"
readme = "README.md"
repository = "https://github.com/xi-frontend/xrl"
version = "0.0.9"
edition = "2018"

[dependencies]
bytes = "0.4.12"
futures = "0.3.1"
futures-core = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
log = "0.4.6"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
tokio = { version="0.2.1", features=["rt-core"] }
tokio-codec = "0.1.1"
tokio-process = "0.2.3"
syntect = { version = "3.2.0", default-features = false }

[dependencies.clippy]
optional = true
version = "0.0.302"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "linecache"
harness = false
